--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,12 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        # Will probably fail on <=3.8, the point is to test that
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v3
@@ -22,7 +21,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install -r requirements.txt -r requirements-test.txt
+      run: |
+        pip install cython
+        pip install -r requirements.txt -r requirements-test.txt
     - name: Lint with flake8
       run: flake8
     - name: Typecheck with mypy
