--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - name: Install dependencies
-        run: pip install -r requirements-docs.txt
+        run: pip install -r requirements.txt -r requirements-docs.txt
       - name: Sphinx build
         run: cd docs && make html
       - name: Deploy
